[gd_scene load_steps=7 format=2]

[ext_resource path="res://Misc/PlaceholderText.gd" type="Script" id=1]
[ext_resource path="res://GraphEditors/NodeTemplate/Node.tscn" type="PackedScene" id=2]
[ext_resource path="res://GraphEditors/Story/Nodes/Scene/Scene.gd" type="Script" id=4]
[ext_resource path="res://GraphEditors/Story/Nodes/Scene/Character/Character.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 28.0
content_margin_right = 28.0
content_margin_top = 24.0
content_margin_bottom = 5.0
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 28.0
content_margin_right = 28.0
content_margin_top = 24.0
content_margin_bottom = 5.0
bg_color = Color( 0.0509804, 0.12549, 0.188235, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_left = 16

[node name="Scene" groups=[
"colourful",
] instance=ExtResource( 2 )]
rect_min_size = Vector2( 211, 109 )
custom_styles/commentfocus = SubResource( 3 )
custom_styles/comment = SubResource( 3 )
custom_styles/frame = SubResource( 3 )
custom_styles/selectedframe = SubResource( 2 )
custom_styles/position = SubResource( 3 )
custom_styles/defaultfocus = SubResource( 3 )
custom_styles/breakpoint = SubResource( 3 )
custom_styles/defaultframe = SubResource( 3 )
title = ""
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 4 )
type = 2
colour_path = NodePath("Top/Colour")
character_container = NodePath("Characters")
character_source = ExtResource( 5 )
description = NodePath("Text")
nochars = NodePath("Characters/NoCharacters")

[node name="Top" type="HBoxContainer" parent="." index="0"]
margin_left = 28.0
margin_top = 24.0
margin_right = 183.0
margin_bottom = 46.0

[node name="Name" type="LineEdit" parent="Top" index="0"]
margin_right = 87.0
margin_bottom = 22.0
size_flags_horizontal = 3
placeholder_text = "Name"

[node name="Colour" type="ColorPickerButton" parent="Top" index="1"]
margin_left = 91.0
margin_right = 115.0
margin_bottom = 22.0
rect_min_size = Vector2( 24, 0 )
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="Edit" type="Button" parent="Top" index="2"]
margin_left = 119.0
margin_right = 155.0
margin_bottom = 22.0
text = "Edit"

[node name="Characters" type="VBoxContainer" parent="." index="1"]
margin_left = 28.0
margin_top = 47.0
margin_right = 183.0
margin_bottom = 69.0

[node name="NoCharacters" type="Label" parent="Characters" index="0"]
margin_right = 97.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "No Characters"

[node name="Text" type="TextEdit" parent="." index="2" groups=[
"big",
]]
margin_left = 28.0
margin_top = 70.0
margin_right = 183.0
margin_bottom = 99.0
rect_min_size = Vector2( 0, 29 )
wrap_enabled = true
script = ExtResource( 1 )
placeholder = "Description"

[node name="Label" type="Label" parent="Text" index="6"]
modulate = Color( 1, 1, 1, 0.6 )
margin_left = 2.0
margin_right = 8.0
margin_bottom = 22.0
text = "Description"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="close_request" from="." to="." method="_on_Scene_close_request"]
[connection signal="text_changed" from="Top/Name" to="." method="_on_Name_text_changed"]
[connection signal="color_changed" from="Top/Colour" to="." method="_on_Colour_color_changed"]
[connection signal="pressed" from="Top/Edit" to="." method="_on_Edit_pressed"]
[connection signal="text_changed" from="Text" to="." method="_on_Description_text_changed"]
